<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="movieData"
            type="byc.avt.movieappjetpack.model.Movie" />
    </data>

    <androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".view.fragment.DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/detail_cover"
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                android:contentDescription="@string/poster_image"
                android:movieCover="@{movieData.cover}"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/detail_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient_bg"
                android:contentDescription="@string/cover_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/detail_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/detail_poster"
                android:layout_width="125dp"
                android:layout_height="175dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/cover_image"
                android:moviePoster="@{movieData.poster}"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/detail_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_cover"
                app:layout_constraintVertical_bias="0.52"
                app:srcCompat="@color/colorAccent" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@{movieData.title}"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/detail_cover" />

            <TextView
                android:id="@+id/popular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/popular"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/detail_title" />

            <TextView
                android:id="@+id/detail_popular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{movieData.popularity}"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/popular"
                app:layout_constraintEnd_toEndOf="@+id/detail_title"
                app:layout_constraintStart_toEndOf="@+id/popular"
                app:layout_constraintTop_toTopOf="@+id/popular" />

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:lineSpacingExtra="5dp"
                android:text="@{movieData.description}"
                android:textColor="@color/text_light_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_poster" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/text_bg_blue"
                android:padding="16dp"
                android:text="@string/genres"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_description" />

            <TextView
                android:id="@+id/detail_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/text_light_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/text_bg_blue"
                android:padding="16dp"
                android:text="@string/cast"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_genre" />

            <ImageView
                android:id="@+id/img_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/favorite_button"
                android:src="@drawable/ic_outline_favorite"
                app:layout_constraintBottom_toBottomOf="@+id/detail_bg"
                app:layout_constraintEnd_toEndOf="@+id/detail_bg" />

            <TextView
                android:id="@+id/tv_addFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/add_to_favorite"
                android:textColor="@android:color/secondary_text_dark"
                app:layout_constraintBottom_toBottomOf="@+id/img_fav"
                app:layout_constraintEnd_toStartOf="@+id/img_fav"
                app:layout_constraintTop_toTopOf="@+id/img_fav" />

            <ImageView
                android:id="@+id/layerHide"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/movie_catalogue"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/rv_cast"
                app:layout_constraintEnd_toEndOf="@+id/detail_bg"
                app:layout_constraintStart_toStartOf="@+id/detail_bg"
                app:layout_constraintTop_toTopOf="@+id/detail_bg"
                app:srcCompat="@color/colorPrimary" />

            <ProgressBar
                android:id="@+id/pb_detail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/detail_description"
                app:layout_constraintStart_toStartOf="@+id/detail_description"
                app:layout_constraintTop_toTopOf="@+id/detail_bg" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:listitem="@layout/item_cast" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>